Some Test cleanups